更改为版心居中

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             bottom: 0;
             padding: 0;
             box-sizing: border-box;
-            margin: 0 auto;
+            margin: 100px auto;
         }
         body {
             background-color: blue;
